--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+::-webkit-scrollbar {
+  width: 2px; /* Set the width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Set the background color of the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Set the color of the thumb */
+  min-width: 5px; /* Set the minimum width of the thumb */
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #f1f1f1; /* Set the color of the corner */
+}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
